--- a/src/app/shared/components/product-card/product-card.html
+++ b/src/app/shared/components/product-card/product-card.html
@@ -1,74 +1,102 @@
 <div
-  class="group w-[18rem] sm:w-[20rem] bg-white border border-gray-100 rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105"
+  class="group w-[18rem] sm:w-[20rem] bg-white rounded-xl shadow-lg max-w-sm overflow-hidden card-hover-effect"
 >
-  <button
-    class="w-full flex items-center justify-center align-middle cursor-pointer"
-    (click)="viewDetail(maillot.id)"
-  >
-    <img
-      class="w-64 mx-auto mt-5 object-cover rounded-2xl"
-      src="{{ maillot.image }}"
-      alt="{{ maillot.nom }}"
-    />
-  </button>
+  <div class="relative p-3">
+    <span
+      class="absolute top-5 left-5 bg-red-600 text-white text-xs font-semibold px-3 py-1 rounded-full z-10"
+    >
+      Nouveau
+    </span>
 
-  <div class="p-5">
-    <h2 class="text-3xl font-bold mb-2">
-      {{ maillot.nom }}
-    </h2>
-    @if (maillot.newPrix) {
-    <div class="flex items-center justify-center space-x-2">
-      <span class="font-bold text-2xl">{{
-        maillot.newPrix?.toLocaleString('fr-FR', {
-          style: 'currency',
-          currency: 'XOF',
-          minimumFractionDigits: 0
-        })
-      }}</span>
-      <span class="text-gray-400 line-through text-xl">{{
-        maillot.prix.toLocaleString('fr-FR', {
-          style: 'currency',
-          currency: 'XOF',
-          minimumFractionDigits: 0
-        })
-      }}</span>
+    <button
+      (click)="viewDetail(maillot.id)"
+      class="bg-gray-200 w-full h-64 flex items-center justify-center rounded-lg relative cursor-pointer"
+    >
+      <img
+        src="{{ maillot.image }}"
+        alt="{{ maillot.nom }}"
+        class="object-cover h-full w-full rounded-lg"
+      />
+    </button>
+  </div>
+
+  <div class="p-3">
+    <h3 class="text-lg font-semibold text-gray-800">{{ maillot.nom }}</h3>
+
+    <div class="flex items-baseline mt-1">
+      @if (maillot.newPrix) {
+      <p class="text-xl font-bold text-green-700 mr-2">
+        {{
+          maillot.prix.toLocaleString('fr-FR', {
+            style: 'currency',
+            currency: 'XOF',
+            minimumFractionDigits: 0
+          })
+        }}
+      </p>
+      <p class="text-sm text-gray-500 line-through">
+        {{
+          maillot.newPrix!.toLocaleString('fr-FR', {
+            style: 'currency',
+            currency: 'XOF',
+            minimumFractionDigits: 0
+          })
+        }}
+      </p>
+      } @else {
+      <p class="text-xl font-bold text-green-700 mr-2">
+        {{
+          maillot.prix.toLocaleString('fr-FR', {
+            style: 'currency',
+            currency: 'XOF',
+            minimumFractionDigits: 0
+          })
+        }}
+      </p>
+      }
     </div>
-    }@else {
-    <p class="font-bold text-2xl">
-      {{
-        maillot.prix.toLocaleString('fr-FR', {
-          style: 'currency',
-          currency: 'XOF',
-          minimumFractionDigits: 0
-        })
-      }}
-    </p>
 
-    }
-    <div class="flex justify-between items-center my-4">
+    <div class="flex items-center justify-between mt-2">
       <div class="flex items-center text-yellow-500 text-xl font-bold">
         <i class="fa-solid fa-star"></i>
-        <span class="text-black ml-1">{{ maillot.note }}</span>
+        <span class="text-black ml-1">{{ maillot.note | number : '1.1' }}</span>
       </div>
       <div
-        class="flex items-center bg-green-100/50 text-green-600 text-xl font-bold px-4 rounded-full py-2 border border-green-600"
+        class="flex items-center bg-green-100/50 text-green-600 text-xl font-bold px-4 rounded-full py-1 border border-green-600"
       >
-        <p>=</p>
+        <p>≈</p>
         <span class="ml-1">{{ maillot.point_achat }} pts</span>
       </div>
     </div>
-    <div class="flex flex-col space-y-4">
+
+    <button
+      (click)="onAddToPanier()"
+      class="w-full bg-green-600 text-white font-bold py-3 rounded-full mt-8 shadow-lg hover:bg-green-700 transform hover:scale-[1.01] transition-all duration-300 flex items-center justify-center space-x-2"
+    >
+      <svg
+        class="w-6 h-6"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
+        ></path>
+      </svg>
+      <span>Ajouter au panier</span>
+    </button>
+
+    <div class="flex justify-center mt-2">
       <button
         (click)="onAddToPanier()"
-        class="w-full py-2 bg-green-600 rounded-2xl text-white shadow-2xl font-bold cursor-pointer"
+        class="max-w-sm px-5 md:max-w-md flex items-center justify-center space-x-2 border border-gray-300 text-white font-semibold py-2 rounded-full bg-gray-800 transition duration-300"
       >
-        Ajouter au panier
-      </button>
-      <button
-        (click)="onAddToPanier()"
-        class="py-2 bg-gray-800 text-white rounded-2xl shadow cursor-pointer"
-      >
-        Acheter ・ {{ maillot.point_achat }} pts
+        <i class="fa-solid fa-tag"></i>
+        <span>Acheter • {{ maillot.point_achat }} pts</span>
       </button>
     </div>
   </div>
